onboarding tour improvements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,12 +31,11 @@
           <div class="card-body">
             <h5>About</h5>
             <p>
-              This application is an open source side-project of a software
-              developer chasing financial freedom. It is a minor modification on
-              a fork of
+              fastFIREward is an open source side-project of a software
+              developer chasing financial freedom. It is a fork of
               <a href="https://beyondrule4.jmmorrissey.com">Beyond Rule 4</a>
               and was created to provide motivation and clarity on a path to
-              financially independence.
+              financial independence.
             </p>
 
             <p>
