--- a/src/app/forecasting/forecasting.component.html
+++ b/src/app/forecasting/forecasting.component.html
@@ -1,5 +1,5 @@
 <div class="mx-xl-5 mb-4">
-  <h1 class="mb-4">FI Forecasting</h1>
+  <h1 class="mb-4">FI Forecasting <i class="fas fa-info-circle small text-muted" role="button" (click)="startOnboarding()" style="cursor: pointer;" ngbTooltip="Guided tour" container="body"></i></h1>
   <div class="row">
     <div class="col-sm-12 col-lg-5 col-xl-4 mb-3 mb-lg-0">
       <app-forecasting-input (calculateInputChange)="onCalculateInputChange($event)">
