--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,12 +2,12 @@
   <a class="navbar-brand d-flex align-items-center" routerLink="/">
     <img
       src="assets/favicon-96x96.png"
-      alt="Beyond Rule 4 Logo"
+      alt="fastFIREward Logo"
       width="40"
       height="40"
       class="me-2"
     />
-    <span class="fw-bold" style="font-style: italic">Beyond</span>&nbsp;Rule 4
+    <span class="fw-bold" style="font-style: italic">fast</span>FIRE<span class="fw-bold" style="font-style: italic">ward</span>
   </a>
   <button
     class="navbar-toggler"
